added plant section

--- a/index.html
+++ b/index.html
@@ -40,7 +40,70 @@
                 <span class="cart-price">Cart($56)</span>
             </div>
         </nav>
+        <div class="banner flex ">
+            <div class="banner-content">
+                <h1 class="banner-title noto-serif dark-1">ALWAYS <span class="primary-text-color">FRESH FLOWERS</span></h1>
+                <p class="banner-description dark-2">Indulge your senses with the beauty and fragrance of our fresh flower shop. From classic roses to exotic blooms, we offer a wide variety of fresh flowers that are perfect for any occasion. </p>
+            </div>
+            <img src="assets/hero-flower.png" alt="">
+        </div>
     </header>
+    <main>
+        <section class="plants">
+            <h2 class="section-title noto-serif"><span class="primary-text-color">Our</span> Plants</h2>
+            <p class="section-description">Indulge your senses with the beauty and fragrance of our fresh flower shop. From classic roses to exotic blooms, we offer a wide variety of fresh</p>
+            <div class="plant-content">
+                <div class="plant-item">
+                    <img src="assets/sample-flower-image.png" alt="">
+                    <p class="flower-name">Lily Blossom</p>
+                    <p class="flower-price">20 USD</p>
+                    <button class="add-to-cart">ADD TO CART</button>
+                </div>
+                <div class="plant-item">
+                    <img src="assets/sample-flower-image.png" alt="">
+                    <p class="flower-name">Lily Blossom</p>
+                    <p class="flower-price">20 USD</p>
+                    <button class="add-to-cart">ADD TO CART</button>
+                </div>
+                <div class="plant-item">
+                    <img src="assets/sample-flower-image.png" alt="">
+                    <p class="flower-name">Lily Blossom</p>
+                    <p class="flower-price">20 USD</p>
+                    <button class="add-to-cart">ADD TO CART</button>
+                </div>
+                <div class="plant-item">
+                    <img src="assets/sample-flower-image.png" alt="">
+                    <p class="flower-name">Lily Blossom</p>
+                    <p class="flower-price">20 USD</p>
+                    <button class="add-to-cart">ADD TO CART</button>
+                </div>
+                <div class="plant-item">
+                    <img src="assets/sample-flower-image.png" alt="">
+                    <p class="flower-name">Lily Blossom</p>
+                    <p class="flower-price">20 USD</p>
+                    <button class="add-to-cart">ADD TO CART</button>
+                </div>
+                <div class="plant-item">
+                    <img src="assets/sample-flower-image.png" alt="">
+                    <p class="flower-name">Lily Blossom</p>
+                    <p class="flower-price">20 USD</p>
+                    <button class="add-to-cart">ADD TO CART</button>
+                </div>
+                <div class="plant-item">
+                    <img src="assets/sample-flower-image.png" alt="">
+                    <p class="flower-name">Lily Blossom</p>
+                    <p class="flower-price">20 USD</p>
+                    <button class="add-to-cart">ADD TO CART</button>
+                </div>
+                <div class="plant-item">
+                    <img src="assets/sample-flower-image.png" alt="">
+                    <p class="flower-name">Lily Blossom</p>
+                    <p class="flower-price">20 USD</p>
+                    <button class="add-to-cart">ADD TO CART</button>
+                </div>
+            </div>
+        </section>
+    </main>
 
 </body>
 
