added plants style

--- a/index.html
+++ b/index.html
@@ -53,54 +53,71 @@
             <h2 class="section-title noto-serif"><span class="primary-text-color">Our</span> Plants</h2>
             <p class="section-description">Indulge your senses with the beauty and fragrance of our fresh flower shop. From classic roses to exotic blooms, we offer a wide variety of fresh</p>
             <div class="plant-content">
-                <div class="plant-item">
+                <div class="plant-item flex">
                     <img src="assets/sample-flower-image.png" alt="">
-                    <p class="flower-name">Lily Blossom</p>
+                    <div class="item-description">
+                        <p class="flower-name inter">Lily Blossom</p>
                     <p class="flower-price">20 USD</p>
-                    <button class="add-to-cart">ADD TO CART</button>
+                    <button class="add-to-cart primary-btn">ADD TO CART</button>
+                    </div>
                 </div>
-                <div class="plant-item">
+                <div class="plant-item flex">
                     <img src="assets/sample-flower-image.png" alt="">
-                    <p class="flower-name">Lily Blossom</p>
+                    <div class="item-description">
+                        <p class="flower-name inter">Lily Blossom</p>
                     <p class="flower-price">20 USD</p>
-                    <button class="add-to-cart">ADD TO CART</button>
+                    <button class="add-to-cart primary-btn">ADD TO CART</button>
+                    </div>
                 </div>
-                <div class="plant-item">
+                <div class="plant-item flex">
                     <img src="assets/sample-flower-image.png" alt="">
-                    <p class="flower-name">Lily Blossom</p>
+                    <div class="item-description">
+                        <p class="flower-name inter">Lily Blossom</p>
                     <p class="flower-price">20 USD</p>
-                    <button class="add-to-cart">ADD TO CART</button>
+                    <button class="add-to-cart primary-btn">ADD TO CART</button>
+                    </div>
                 </div>
-                <div class="plant-item">
+                <div class="plant-item flex">
                     <img src="assets/sample-flower-image.png" alt="">
-                    <p class="flower-name">Lily Blossom</p>
+                    <div class="item-description">
+                        <p class="flower-name inter">Lily Blossom</p>
                     <p class="flower-price">20 USD</p>
-                    <button class="add-to-cart">ADD TO CART</button>
+                    <button class="add-to-cart primary-btn">ADD TO CART</button>
+                    </div>
                 </div>
-                <div class="plant-item">
+                <div class="plant-item flex">
                     <img src="assets/sample-flower-image.png" alt="">
-                    <p class="flower-name">Lily Blossom</p>
+                    <div class="item-description">
+                        <p class="flower-name inter">Lily Blossom</p>
                     <p class="flower-price">20 USD</p>
-                    <button class="add-to-cart">ADD TO CART</button>
+                    <button class="add-to-cart primary-btn">ADD TO CART</button>
+                    </div>
                 </div>
-                <div class="plant-item">
+                <div class="plant-item flex">
                     <img src="assets/sample-flower-image.png" alt="">
-                    <p class="flower-name">Lily Blossom</p>
+                    <div class="item-description">
+                        <p class="flower-name inter">Lily Blossom</p>
                     <p class="flower-price">20 USD</p>
-                    <button class="add-to-cart">ADD TO CART</button>
+                    <button class="add-to-cart primary-btn">ADD TO CART</button>
+                    </div>
                 </div>
-                <div class="plant-item">
+                <div class="plant-item flex">
                     <img src="assets/sample-flower-image.png" alt="">
-                    <p class="flower-name">Lily Blossom</p>
+                    <div class="item-description">
+                        <p class="flower-name inter">Lily Blossom</p>
                     <p class="flower-price">20 USD</p>
-                    <button class="add-to-cart">ADD TO CART</button>
+                    <button class="add-to-cart primary-btn">ADD TO CART</button>
+                    </div>
                 </div>
-                <div class="plant-item">
+                <div class="plant-item flex">
                     <img src="assets/sample-flower-image.png" alt="">
-                    <p class="flower-name">Lily Blossom</p>
+                    <div class="item-description">
+                        <p class="flower-name inter">Lily Blossom</p>
                     <p class="flower-price">20 USD</p>
-                    <button class="add-to-cart">ADD TO CART</button>
+                    <button class="add-to-cart primary-btn">ADD TO CART</button>
+                    </div>
                 </div>
+                
             </div>
         </section>
     </main>
