--- a/index.html
+++ b/index.html
@@ -42,8 +42,11 @@
         </nav>
         <div class="banner flex ">
             <div class="banner-content">
-                <h1 class="banner-title noto-serif dark-1">ALWAYS <span class="primary-text-color">FRESH FLOWERS</span></h1>
-                <p class="banner-description dark-2">Indulge your senses with the beauty and fragrance of our fresh flower shop. From classic roses to exotic blooms, we offer a wide variety of fresh flowers that are perfect for any occasion. </p>
+                <h1 class="banner-title noto-serif dark-1">ALWAYS <span class="primary-text-color">FRESH FLOWERS</span>
+                </h1>
+                <p class="banner-description dark-2">Indulge your senses with the beauty and fragrance of our fresh
+                    flower shop. From classic roses to exotic blooms, we offer a wide variety of fresh flowers that are
+                    perfect for any occasion. </p>
             </div>
             <img src="assets/hero-flower.png" alt="">
         </div>
@@ -51,73 +54,73 @@
     <main>
         <section class="plants">
             <h2 class="section-title noto-serif"><span class="primary-text-color">Our</span> Plants</h2>
-            <p class="section-description">Indulge your senses with the beauty and fragrance of our fresh flower shop. From classic roses to exotic blooms, we offer a wide variety of fresh</p>
+            <p class="section-description">Indulge your senses with the beauty and fragrance of our fresh flower shop.
+                From classic roses to exotic blooms, we offer a wide variety of fresh</p>
             <div class="plant-content">
                 <div class="plant-item flex">
                     <img src="assets/sample-flower-image.png" alt="">
                     <div class="item-description">
-                        <p class="flower-name inter">Lily Blossom</p>
-                    <p class="flower-price">20 USD</p>
-                    <button class="add-to-cart primary-btn">ADD TO CART</button>
+                        <p class="flower-name inter dark-3">Lily Blossom</p>
+                        <p class="flower-price dark-1">20 USD</p>
+                        <button class="add-to-cart primary-btn">ADD TO CART</button>
                     </div>
                 </div>
                 <div class="plant-item flex">
                     <img src="assets/sample-flower-image.png" alt="">
                     <div class="item-description">
-                        <p class="flower-name inter">Lily Blossom</p>
-                    <p class="flower-price">20 USD</p>
-                    <button class="add-to-cart primary-btn">ADD TO CART</button>
+                        <p class="flower-name inter dark-3">Lily Blossom</p>
+                        <p class="flower-price dark-1">20 USD</p>
+                        <button class="add-to-cart primary-btn">ADD TO CART</button>
                     </div>
                 </div>
                 <div class="plant-item flex">
                     <img src="assets/sample-flower-image.png" alt="">
                     <div class="item-description">
-                        <p class="flower-name inter">Lily Blossom</p>
-                    <p class="flower-price">20 USD</p>
-                    <button class="add-to-cart primary-btn">ADD TO CART</button>
+                        <p class="flower-name inter dark-3">Lily Blossom</p>
+                        <p class="flower-price dark-1">20 USD</p>
+                        <button class="add-to-cart primary-btn">ADD TO CART</button>
                     </div>
                 </div>
                 <div class="plant-item flex">
                     <img src="assets/sample-flower-image.png" alt="">
                     <div class="item-description">
-                        <p class="flower-name inter">Lily Blossom</p>
-                    <p class="flower-price">20 USD</p>
-                    <button class="add-to-cart primary-btn">ADD TO CART</button>
+                        <p class="flower-name inter dark-3">Lily Blossom</p>
+                        <p class="flower-price dark-1">20 USD</p>
+                        <button class="add-to-cart primary-btn">ADD TO CART</button>
                     </div>
                 </div>
                 <div class="plant-item flex">
                     <img src="assets/sample-flower-image.png" alt="">
                     <div class="item-description">
-                        <p class="flower-name inter">Lily Blossom</p>
-                    <p class="flower-price">20 USD</p>
-                    <button class="add-to-cart primary-btn">ADD TO CART</button>
+                        <p class="flower-name inter dark-3">Lily Blossom</p>
+                        <p class="flower-price dark-1">20 USD</p>
+                        <button class="add-to-cart primary-btn">ADD TO CART</button>
                     </div>
                 </div>
                 <div class="plant-item flex">
                     <img src="assets/sample-flower-image.png" alt="">
                     <div class="item-description">
-                        <p class="flower-name inter">Lily Blossom</p>
-                    <p class="flower-price">20 USD</p>
-                    <button class="add-to-cart primary-btn">ADD TO CART</button>
+                        <p class="flower-name inter dark-3">Lily Blossom</p>
+                        <p class="flower-price dark-1">20 USD</p>
+                        <button class="add-to-cart primary-btn">ADD TO CART</button>
                     </div>
                 </div>
                 <div class="plant-item flex">
                     <img src="assets/sample-flower-image.png" alt="">
                     <div class="item-description">
-                        <p class="flower-name inter">Lily Blossom</p>
-                    <p class="flower-price">20 USD</p>
-                    <button class="add-to-cart primary-btn">ADD TO CART</button>
+                        <p class="flower-name inter dark-3">Lily Blossom</p>
+                        <p class="flower-price dark-1">20 USD</p>
+                        <button class="add-to-cart primary-btn">ADD TO CART</button>
                     </div>
                 </div>
                 <div class="plant-item flex">
                     <img src="assets/sample-flower-image.png" alt="">
                     <div class="item-description">
-                        <p class="flower-name inter">Lily Blossom</p>
-                    <p class="flower-price">20 USD</p>
-                    <button class="add-to-cart primary-btn">ADD TO CART</button>
+                        <p class="flower-name inter dark-3">Lily Blossom</p>
+                        <p class="flower-price dark-1">20 USD</p>
+                        <button class="add-to-cart primary-btn">ADD TO CART</button>
                     </div>
                 </div>
-                
             </div>
         </section>
     </main>
