added flower store and deal section

--- a/index.html
+++ b/index.html
@@ -138,6 +138,31 @@
                 </ul>
             </div>
         </section>
+        <section class="deal noto-serif">
+            <h2 class="section-title"> <span class="primary-text-color">Latest</span> Deals</h2>
+            <p class="section-description dark-2">Indulge your senses with the beauty and fragrance of our fresh flower shop. From classic roses to exotic blooms, we offer a wide variety of fresh.</p>
+            <div class="deal-content">
+                <div class="item-1 item-size">
+                    <h2 class="item-title">60% Off | Bloom Plant</h2>
+                    <button class="shop-btn">Shop Now</button>
+                </div>
+                <div class="item-2 item-size">
+                    <h2 class="item-title">30% Off | Ana  Plant</h2>
+                    <button class="shop-btn">Shop Now</button>
+                </div>
+                <div class="item-3 item-size">
+                    <h2 class="item-title">25% Off | Zabo Plant</h2>
+                    <button class="shop-btn">Shop Now</button>
+                </div>
+            </div>
+        </section>
+        <section class="join-to-bunch">
+            <h2 class="section-title">Join the colorful Bunch</h2>
+            <div class="input-section">
+                <input type="text">
+                <button class="subscribe-btn primary-btn">Subscribe</button>
+            </div>
+        </section>
     </main>
 
 </body>
