added footer section

--- a/index.html
+++ b/index.html
@@ -131,23 +131,27 @@
             <div class="section-content">
                 <h2 class="section-title dark-1">Flower & Plants Lover</h2>
                 <ul>
-                    <li class="section-description dark-2">Indulge your senses with the beauty and fragrance of our fresh flower shop. From classic roses to exotic blooms, we offer a wide variety of fresh.</li>
-                    <li class="section-description dark-2">Indulge your senses with the beauty and fragrance of our fresh flower shop. From classic roses to exotic blooms, we offer a wide variety of fresh.</li>
-                    <li class="section-description dark-2">Indulge your senses with the beauty and fragrance of our fresh flower shop. From classic roses to exotic blooms, we offer a wide variety of fresh.</li>
-                    
+                    <li class="section-description dark-2">Indulge your senses with the beauty and fragrance of our
+                        fresh flower shop. From classic roses to exotic blooms, we offer a wide variety of fresh.</li>
+                    <li class="section-description dark-2">Indulge your senses with the beauty and fragrance of our
+                        fresh flower shop. From classic roses to exotic blooms, we offer a wide variety of fresh.</li>
+                    <li class="section-description dark-2">Indulge your senses with the beauty and fragrance of our
+                        fresh flower shop. From classic roses to exotic blooms, we offer a wide variety of fresh.</li>
+
                 </ul>
             </div>
         </section>
         <section class="deal">
             <h2 class="section-title noto-serif"> <span class="primary-text-color">Latest</span> Deals</h2>
-            <p class="section-description dark-2 inter">Indulge your senses with the beauty and fragrance of our fresh flower shop. From classic roses to exotic blooms, we offer a wide variety of fresh.</p>
+            <p class="section-description dark-2 inter">Indulge your senses with the beauty and fragrance of our fresh
+                flower shop. From classic roses to exotic blooms, we offer a wide variety of fresh.</p>
             <div class="deal-content">
                 <div class="item-1 item-size">
                     <h2 class="item-title noto-serif">60% Off | Bloom Plant</h2>
                     <button class="shop-btn inter">Shop Now</button>
                 </div>
                 <div class="item-2 item-size">
-                    <h2 class="item-title noto-serif">30% Off | Ana  Plant</h2>
+                    <h2 class="item-title noto-serif">30% Off | Ana Plant</h2>
                     <button class="shop-btn inter">Shop Now</button>
                 </div>
                 <div class="item-3 item-size">
@@ -164,6 +168,28 @@
             </div>
         </section>
     </main>
+    <footer>
+        <div class="footer-logo"><img src="assets/logo.png" alt=""></div>
+        <p class="footer-description dark-2 inter">Indulge your senses with the beauty and fragrance of our fresh flower shop. </p>
+        <div class="links">
+            <ul>
+                <li><a href="">Home</a></li>
+                <li><a href="">About Us</a></li>
+                <li><a href="">Blog</a></li>
+                <li><a href="">FAQ</a></li>
+                <li><a href="">Contact Us</a></li>
+                <li><a href="">Features</a></li>
+                <li><a href="">Pricing</a></li>
+                <li><a href="">Privacy Policy</a></li>
+                <li><a href="">Terms of Service</a></li>
+                <li><a href="">Help Center</a></li>
+            </ul>
+        </div>
+        <div class="icons">
+            <img src="assets/icon-linkedin.png" alt=""><img src="assets/icon-twitter.png" alt=""><img src="assets/icon-facebook.png" alt="">
+            <img src="assets/icon-youtube.png" alt="">
+        </div>
+    </footer>
 
 </body>
 
