banner style for large screen

--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
             <div class="banner-content">
                 <h1 class="banner-title noto-serif dark-1">ALWAYS <span class="primary-text-color">FRESH FLOWERS</span>
                 </h1>
-                <p class="banner-description dark-2">Indulge your senses with the beauty and fragrance of our fresh
+                <p class="banner-description inter dark-2">Indulge your senses with the beauty and fragrance of our fresh
                     flower shop. From classic roses to exotic blooms, we offer a wide variety of fresh flowers that are
                     perfect for any occasion. </p>
             </div>
