--- a/index.html
+++ b/index.html
@@ -63,71 +63,71 @@
     <main>
         <section class="plants">
             <h2 class="section-title noto-serif"><span class="primary-text-color">Our</span> Plants</h2>
-            <p class="section-description">Indulge your senses with the beauty and fragrance of our fresh flower shop.
+            <p class="section-description dark-2">Indulge your senses with the beauty and fragrance of our fresh flower shop.
                 From classic roses to exotic blooms, we offer a wide variety of fresh</p>
             <div class="plant-content">
                 <div class="plant-item flex">
                     <img src="assets/sample-flower-image.png" alt="">
                     <div class="item-description">
                         <p class="flower-name inter dark-3">Lily Blossom</p>
-                        <p class="flower-price dark-1">20 USD</p>
-                        <button class="add-to-cart primary-btn">ADD TO CART</button>
+                        <p class="flower-price dark-1 inter">20 USD</p>
+                        <button class="add-to-cart primary-btn inter">ADD TO CART</button>
                     </div>
                 </div>
                 <div class="plant-item flex">
                     <img src="assets/sample-flower-image.png" alt="">
                     <div class="item-description">
                         <p class="flower-name inter dark-3">Lily Blossom</p>
-                        <p class="flower-price dark-1">20 USD</p>
-                        <button class="add-to-cart primary-btn">ADD TO CART</button>
+                        <p class="flower-price dark-1 inter">20 USD</p>
+                        <button class="add-to-cart primary-btn inter">ADD TO CART</button>
                     </div>
                 </div>
                 <div class="plant-item flex">
                     <img src="assets/sample-flower-image.png" alt="">
                     <div class="item-description">
                         <p class="flower-name inter dark-3">Lily Blossom</p>
-                        <p class="flower-price dark-1">20 USD</p>
-                        <button class="add-to-cart primary-btn">ADD TO CART</button>
+                        <p class="flower-price dark-1 inter">20 USD</p>
+                        <button class="add-to-cart primary-btn inter">ADD TO CART</button>
                     </div>
                 </div>
                 <div class="plant-item flex">
                     <img src="assets/sample-flower-image.png" alt="">
                     <div class="item-description">
                         <p class="flower-name inter dark-3">Lily Blossom</p>
-                        <p class="flower-price dark-1">20 USD</p>
-                        <button class="add-to-cart primary-btn">ADD TO CART</button>
+                        <p class="flower-price dark-1 inter">20 USD</p>
+                        <button class="add-to-cart primary-btn inter">ADD TO CART</button>
                     </div>
                 </div>
                 <div class="plant-item flex">
                     <img src="assets/sample-flower-image.png" alt="">
                     <div class="item-description">
                         <p class="flower-name inter dark-3">Lily Blossom</p>
-                        <p class="flower-price dark-1">20 USD</p>
-                        <button class="add-to-cart primary-btn">ADD TO CART</button>
+                        <p class="flower-price dark-1 inter">20 USD</p>
+                        <button class="add-to-cart primary-btn inter">ADD TO CART</button>
                     </div>
                 </div>
                 <div class="plant-item flex">
                     <img src="assets/sample-flower-image.png" alt="">
                     <div class="item-description">
                         <p class="flower-name inter dark-3">Lily Blossom</p>
-                        <p class="flower-price dark-1">20 USD</p>
-                        <button class="add-to-cart primary-btn">ADD TO CART</button>
+                        <p class="flower-price dark-1 inter">20 USD</p>
+                        <button class="add-to-cart primary-btn inter">ADD TO CART</button>
                     </div>
                 </div>
                 <div class="plant-item flex">
                     <img src="assets/sample-flower-image.png" alt="">
                     <div class="item-description">
                         <p class="flower-name inter dark-3">Lily Blossom</p>
-                        <p class="flower-price dark-1">20 USD</p>
-                        <button class="add-to-cart primary-btn">ADD TO CART</button>
+                        <p class="flower-price dark-1 inter">20 USD</p>
+                        <button class="add-to-cart primary-btn inter">ADD TO CART</button>
                     </div>
                 </div>
                 <div class="plant-item flex">
                     <img src="assets/sample-flower-image.png" alt="">
                     <div class="item-description">
                         <p class="flower-name inter dark-3">Lily Blossom</p>
-                        <p class="flower-price dark-1">20 USD</p>
-                        <button class="add-to-cart primary-btn">ADD TO CART</button>
+                        <p class="flower-price dark-1 inter">20 USD</p>
+                        <button class="add-to-cart primary-btn inter">ADD TO CART</button>
                     </div>
                 </div>
             </div>
