flower store styel for large screen

--- a/index.html
+++ b/index.html
@@ -133,18 +133,18 @@
             </div>
         </section>
         <section class="flower-store flex ">
-            <div class="section-img">
+            <div class="section-img flex">
                 <img src="assets/flower-store.png" class="store-flower-1" alt="">
                 <img src="assets/trusted-badge.png" class="store-flower-2" alt="">
             </div>
-            <div class="section-content">
-                <h2 class="section-title dark-1">Flower & Plants Lover</h2>
+            <div class="section-content flower-content">
+                <h2 class="section-title noto-serif dark-1">Flower & Plants Lover</h2>
                 <ul>
-                    <li class="section-description dark-2">Indulge your senses with the beauty and fragrance of our
+                    <li class="section-description dark-2 inter">Indulge your senses with the beauty and fragrance of our
                         fresh flower shop. From classic roses to exotic blooms, we offer a wide variety of fresh.</li>
-                    <li class="section-description dark-2">Indulge your senses with the beauty and fragrance of our
+                    <li class="section-description dark-2 inter">Indulge your senses with the beauty and fragrance of our
                         fresh flower shop. From classic roses to exotic blooms, we offer a wide variety of fresh.</li>
-                    <li class="section-description dark-2">Indulge your senses with the beauty and fragrance of our
+                    <li class="section-description dark-2 inter">Indulge your senses with the beauty and fragrance of our
                         fresh flower shop. From classic roses to exotic blooms, we offer a wide variety of fresh.</li>
 
                 </ul>
