join section style for large screen

--- a/index.html
+++ b/index.html
@@ -169,10 +169,10 @@
                 </div>
             </div>
         </section>
-        <section class="join-to-bunch">
-            <h2 class="section-title">Join the colorful Bunch</h2>
-            <div class="input-section">
-                <input type="text" placeholder="Enter Email">
+        <section class="join-to-bunch flex">
+            <h2 class="section-title noto-serif">Join the colorful Bunch</h2>
+            <div class="input-section flex">
+                <input type="text" placeholder="Enter Email" class="inter">
                 <button class="subscribe-btn primary-btn">Subscribe</button>
             </div>
         </section>
