footer sytle for large screen

--- a/index.html
+++ b/index.html
@@ -177,10 +177,12 @@
             </div>
         </section>
     </main>
-    <footer>
-        <div class="footer-logo"><img src="assets/logo.png" alt=""></div>
-        <p class="footer-description dark-2 inter">Indulge your senses with the beauty and fragrance of our fresh flower
-            shop. </p>
+    <footer class="flex">
+        <div class="footer-logo">
+            <img src="assets/logo.png" alt="">
+            <p class="footer-description dark-2 inter">Indulge your senses with the beauty and fragrance of our fresh flower
+            shop. </p></div>
+        
         <div class="links">
             <ul>
                 <li><a href="">Home</a></li>
@@ -195,9 +197,10 @@
                 <li><a href="">Help Center</a></li>
             </ul>
         </div>
-        <div class="icons">
-            <img src="assets/icon-linkedin.png" alt=""><img src="assets/icon-twitter.png" alt=""><img
-                src="assets/icon-facebook.png" alt="">
+        <div class="icons flex">
+            <img src="assets/icon-linkedin.png" alt="">
+            <img src="assets/icon-twitter.png" alt="">
+            <img src="assets/icon-facebook.png" alt="">
             <img src="assets/icon-youtube.png" alt="">
         </div>
     </footer>
