responsive for mobile screen

--- a/index.html
+++ b/index.html
@@ -37,9 +37,9 @@
             </div>
 
             <ul class="nav-links flex">
-                <li><a href=""  class="home">Home</a></li>
-                <li><a href="">Shop</a></li>
-                <li><a href="">About Us</a></li>
+                <li><a href=""  class="home hidden">Home</a></li>
+                <li><a href="" class=" hidden">Shop</a></li>
+                <li><a href="" class=" hidden">About Us</a></li>
                 <li class="nav-cart">
                     <span class="cart-logo"><i class="fa-solid fa-cart-shopping fa-2xs"
                             style="color: #000000;"></i></span>
