final checked done

--- a/index.html
+++ b/index.html
@@ -31,6 +31,8 @@
 
 <body>
     <header>
+        <!-- nav section  -->
+
         <nav class="flex">
             <div class="nav-logo">
                 <img src="assets/logo.png" alt="">
@@ -49,6 +51,9 @@
 
 
         </nav>
+
+        <!-- banner section  -->
+
         <div class="banner flex ">
             <div class="banner-content">
                 <h1 class="banner-title noto-serif dark-1">ALWAYS <span class="primary-text-color">FRESH FLOWERS</span>
@@ -61,6 +66,9 @@
         </div>
     </header>
     <main>
+
+        <!-- plant section  -->
+
         <section class="plants">
             <h2 class="section-title noto-serif"><span class="primary-text-color">Our</span> Plants</h2>
             <p class="section-description dark-2">Indulge your senses with the beauty and fragrance of our fresh flower shop.
@@ -132,6 +140,9 @@
                 </div>
             </div>
         </section>
+
+        <!-- flower store section  -->
+
         <section class="flower-store flex ">
             <div class="section-img flex">
                 <img src="assets/flower-store.png" class="store-flower-1" alt="">
@@ -150,6 +161,9 @@
                 </ul>
             </div>
         </section>
+
+        <!-- deal section  -->
+
         <section class="deal">
             <h2 class="section-title noto-serif"> <span class="primary-text-color">Latest</span> Deals</h2>
             <p class="section-description dark-2 inter">Indulge your senses with the beauty and fragrance of our fresh
@@ -169,6 +183,9 @@
                 </div>
             </div>
         </section>
+
+        <!-- join section  -->
+
         <section class="join-to-bunch flex">
             <h2 class="section-title noto-serif">Join the colorful Bunch</h2>
             <div class="input-section flex">
@@ -177,6 +194,9 @@
             </div>
         </section>
     </main>
+
+    <!-- footer section  -->
+     
     <footer class="flex">
         <div class="footer-logo">
             <img src="assets/logo.png" alt="">
